--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -55,7 +55,6 @@ Power to the motors is supplied by the power supply, which also measures the cur
 \subsubsection{Results}
 Measured current on both engines is between 70 and 80 mA when running freely.
 
-
 \subsection{DC Motors}
 
 \subsubsection{Equipment}
@@ -71,15 +70,29 @@ Measured current on both engines is between 70 and 80 mA when running freely.
 \subsection{H-Bridge}
 
 \subsubsection{Equipment}
-%\begin{enumerate}
-%	\item[•]Hameg HM8040-2 Triple Power Supply
-%	\item[•]Fluke 45 Multimeter
-%	\item[•]Agilent MSO-X 3024A Oscilloscope.
-%\end{enumerate}
+\begin{enumerate}
+	\item[•]Elcanic Power Supply
+	\item[•]Fluke 45 Multimeter
+\end{enumerate}
 
 \subsubsection{Setup}
+Power to the H-bridge is supplied by the power supply. Current and voltage will be measured by the multimeter.
+All of the Mosfet transistors were removed before doing the test. It was done to avoid powering the engines.
+
 
 \subsubsection{Results}
+There was a suspicion concerning the H-bridge, it had been measured there was an error or a damaged component. The affected part in suspicion was the H-bridge for the left motor.\\
+
+All of the transistors were tested on the part of the H-bridge in question.
+Since there was 0 in value on the base, it is suspected that a resistor which sat on the board just before the transistor. This and the other resistor values were measured and found to be identical, based on the measures it could be concluded that it was probably a failed transistor.\\
+
+It was concluded that the damaged transistor were the: Q14 (TBD link til schematics).\\
+
+The results were as following:\
+
+Normal NPN transistors: base 0.854V, collector 0.073V\
+
+Faulty NPN transistor. base 0V, collector 0V.\\
 
 \subsection{PWM}
 
