--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -4,3 +4,10 @@ title = {placeholderTitle },
 year = 2016,
 url = {http://www.ucn.dk},
 }
+
+@techreport{Q14,
+author={Group 2, UCN},
+title = {Third semester report },
+year ={2016},
+Page ={unknown atm),
+}
