--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -86,7 +86,8 @@ There was a suspicion concerning the H-bridge, it had been measured there was an
 All of the transistors were tested on the part of the H-bridge in question.
 Since there was 0 in value on the base, it is suspected that a resistor which sat on the board just before the transistor. This and the other resistor values were measured and found to be identical, based on the measures it could be concluded that it was probably a failed transistor.\\
 
-It was concluded that the damaged transistor were the: Q14 (TBD link til schematics).\\
+It was concluded that the damaged transistor was the: Q14 %\cite{Q14}  
+(TBD link til schematics).\\
 
 The results were as following:\
 
