--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -60,6 +60,8 @@
 \listoftables
 \addtocontents{lot}{~\hfill\textbf{Page}\par}
 \newpage
+\chapter{Hardware appendix}
+\input{contents/appendices/HardwareAppendix.tex}
 \chapter{Software appendix}
 \input{contents/appendices/Ccode.tex}
 \input{contents/appendices/Csharpcode.tex}
