--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -5,9 +5,11 @@ year = 2016,
 url = {http://www.ucn.dk},
 }
 
-@techreport{Q14,
+@inbook{Q14,
 author={Group 2, UCN},
 title = {Third semester report },
+Pages ={unknown atm),
+publisher = {Benjamin, Henrik, Martin & Nikolaj}
 year ={2016},
-Page ={unknown atm),
+
 }
