--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -8,8 +8,8 @@ url = {http://www.ucn.dk},
 @inbook{Q14,
 author={Group 2, UCN},
 title = {Third semester report },
-Pages ={unknown atm),
-publisher = {Benjamin, Henrik, Martin & Nikolaj}
+pages ={unknown atm},
+publisher = {Benjamin, Henrik, Martin & Nikolaj},
 year ={2016},
 
 }
