--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -5,11 +5,9 @@ year = 2016,
 url = {http://www.ucn.dk},
 }
 
-@inbook{Q14,
+@unpublished{Q14,
 author={Group 2, UCN},
-title = {Third semester report },
-pages ={unknown atm},
-publisher = {Benjamin, Henrik, Martin & Nikolaj},
-year ={2016},
-
+title = {Third semester report},
+note = {Chapter 10, board schematics},
+year = 2016,
 }
