--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -81,10 +81,10 @@ All of the Mosfet transistors were removed before doing the test. It was done to
 
 
 \subsubsection{Results}
-There was a suspicion concerning the H-bridge, it had been measured there was an error or a damaged component. The affected part in suspicion was the H-bridge for the left motor.\\
+There was a suspicion concerning the H-bridge, it had been measured that there was an error or a damaged component. The affected suspected part was the H-bridge for the left motor.\\
 
 All of the transistors were tested on the part of the H-bridge in question.
-Since there was a 0 in value on the base, it is suspected that a resistor which sat on the board just before the transistor. This and the other resistor values were measured and found to be identical, based on the measures it could be concluded that it was probably a failed transistor.\\
+Since there was a 0 in value on the base, it is suspected that a resistor which sat on the board just before the transistor. This and the other resistor values were measured and found to be identical, based on the measures it could be concluded that it was most likely a failed transistor.\\
 
 It was concluded that the damaged transistor was the: Q14 \cite{Q14}  
 (TBD link til schematics).\\
