--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -1,4 +1,4 @@
-In this section the problems found when trying to get the robot function, will be listed and analysed
+This section will be focused on analysing any problems the group may face, how to approach them, and how they should be handled.
 
 \section{Problem statement}
 
