--- a/Rapport/contents/software/softwaredesc.tex
+++ b/Rapport/contents/software/softwaredesc.tex
@@ -9,7 +9,8 @@ TBD ?
 %\end{lstlisting}
 
 \section{Pulse-width modulation}
-TBD (indledning kort) NIKOLAJ
+Pulse Width Modulation is a very effective and straightforward way to control the speed of the robot rapidly. It works by limiting how long the of a given period the power is ‘on’ compared to ‘off’.
+
 \subsection {Why utilize pulse-width modulation}
 
 Pulse-width modulation, or PWM, is a way to regulate power distribution within a system. It is a software solution that manages when a device receives power, and for how long at a time it does this. This is called a duty cycle. The robot utilizes PWM for its motors, to regulate how quickly it moves. PWM can be compared to turning a switch on and off extremely quickly - much more quickly than what will affect the performance of the motors. Effectively, this means that the robot's programming will now be able to regulate speed autonomously. 
