--- a/Rapport/contents/appendices/HardwareAppendix.tex
+++ b/Rapport/contents/appendices/HardwareAppendix.tex
@@ -1,17 +1,43 @@
 \section{Hardware Schematics}
 
 \subsection{H-bridge 1}
-\includegraphics[width=0.7\textwidth]{figures/HB1.PNG}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/HB1.PNG}
+	\caption{\text{H-bridge 1 Schematics}}
+	\label{Hardware diagram}
+\end{figure}
+
 \subsection{H-bridge 2}
-\includegraphics[width=0.7\textwidth]{figures/HB2.PNG}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/HB2.PNG}
+	\caption{\text{H-bridge 2 Schematics}}
+	\label{Hardware diagram}
+\end{figure}
 
 \subsection{CPLD}
-
-\includegraphics[width=0.7\textwidth]{figures/CPLD.PNG}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/CPLD.PNG}
+	\caption{\text{Schematics of the CPLD}}
+	\label{Hardware diagram}
+\end{figure}
 
 \subsection{Power}
 
-\includegraphics[width=0.7\textwidth]{figures/Power.PNG}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/Power.PNG}
+	\caption{\text{Power supply}}
+	\label{Hardware diagram}
+\end{figure}
 
 \subsection{Board schematics}
-\includegraphics[width=0.7\textwidth]{figures/BoardSche.PNG}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/BoardSche.PNG}
+	\caption{\text{Full board Schematics}}
+	\label{Hardware diagram}
+\end{figure}
+
