Ændringer klar til weekend
I hope

--- a/Rapport/contents/appendices/groupcollab.tex
+++ b/Rapport/contents/appendices/groupcollab.tex
@@ -1,3 +1,4 @@
+TBD hele den her section
 \section{Group collaboration agreement}
 \subsection{Contact Information}
 \begin{table}[h!]
@@ -17,6 +18,9 @@ Nikolaj Bilgrau  & Tlf: 29802715 & @: nikolajbilgrau@gmail.com \\ \hline
 
 
 \subsection{Deadline}
+\subsubsection{Hardware}
+The hardware part of the project was supposed to be ready before the 22th 
+\subsubsection{Software}
 
 \subsection{Milestones and goals}
 Gerne en kalender der viser dage arbejdet!
