--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -104,6 +104,13 @@ The robot will make use of an H-bridge. An H-bridge is a circuit made for contro
 
 \subsection{The motors - Pololu}
 
+%\begin{figure}[!ht]
+%	\centering
+%	\includegraphics[width=0.7\textwidth]{figures/pololu.jpg}
+%	\caption{\text{Pololu micro metal gear motors}}
+%	\label{Hardware diagram}
+%\end{figure}
+
 \section{The Bluetooth tranceiver}
 The robot will utilize the BlueSmiRF Silver bluetooth tranceiver. The transceiver is made by Sparkfun, it is utilized to make use of an GUI, by sending data from the MCU to the computer (GUI) by the use of bluetooth.\\ The bluetooth tranceiver makes it possible to monitor both the inputs and the logic behind the steering. The baudrate is between 2400-115200 bps and the tranceiver can be powered from 3.3v up to 6v. 
 
