Færdig klar til fuld skrivning derhjemme
Gofor it

--- a/Rapport/contents/formalities/titleSheet.tex
+++ b/Rapport/contents/formalities/titleSheet.tex
@@ -45,7 +45,7 @@ Autonomous Object Avoidance Robot
 
 \begin{description}
 \item { Project Period:}\\
-   3. Semester | Spring semester 2016\\
+   3. Semester | Fall semester 2016\\
   \hspace{4cm}
 \item { Projectgroup:}\\
   Group 2 
