--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -1,13 +1,14 @@
+TBD mere fyld
 This section specifies the requirements. The requirements have been found through the analysis.
 
 \cite{ucn}
 \begin{enumerate}
-	\item[•]The robot needs line following capabilities\\
-	\item[•]The robot needs object avoidance\\
-	\item[•]The robot should make use of an H-bridge\\
-	\item[•]The robot should make use of Motors\\
-	\item[•]The robot needs a way to implement motor control\\
-	\item[•]The robot should make use of a micro-controller unit\\
-	\item[•]The robot should make use of the Magician chassis\\
+	\item[•]The robot needs line following capabilities
+	\item[•]The robot needs object avoidance
+	\item[•]The robot should make use of an H-bridge
+	\item[•]The robot should make use of Motors
+	\item[•]The robot needs a way to implement motor control
+	\item[•]The robot should make use of a micro-controller unit
+	\item[•]The robot should make use of the Magician chassis
 \end{enumerate}
 
