--- a/Rapport/contents/software/softwaredesc.tex
+++ b/Rapport/contents/software/softwaredesc.tex
@@ -1,11 +1,11 @@
 
 Beskriv Software section
 
-\subsection{Software diagram}
-
-
+\section{Software flowchart}
+TBD
 \section{Pulse-width modulation}
-Pulse Width Modulation is a very effective and straightforward way to control the speed of the robot rapidly. It works by limiting how long the of a given period the power is ‘on’ compared to ‘off’.
+TBD fyld?
+Pulse Width Modulation is a very effective and straightforward way to control the speed of the robot rapidly. It works by limiting how long the of a given period the power is 'on' compared to 'off'.
 
 \subsection {Why utilize pulse-width modulation}
 
@@ -15,5 +15,15 @@ Pulse-width modulation, or PWM, is a way to regulate power distribution within a
 
 The duty cycle is used to describe how long the power is 'on' compared to 'off'. A higher duty cycle will yield more energy than a low one. The programming uses a frequency of 1000Hz, which makes it straightforward to calculate to real time, if this is needed - it also provides enough precision to make the motors responsive quickly.
 
+TBD Vores brug af pwm
+
+\section{Feedback loop}
+TBD
+\section{CPLD}
+TBD
 \section{Part conclusion}
-Software problemer og løsninger
+TBD Software problemer og løsninger
+
+TBD Hvorfor ikke RTOS?
+
+TBD hvilke krav har vi droppet?
