--- a/Rapport/contents/formalities/frontpage.tex
+++ b/Rapport/contents/formalities/frontpage.tex
@@ -24,7 +24,7 @@ Group members:
  Benjamin Nielsen - Henrik Jensen - Martin Nonboe - Nikolaj Bilgrau
 \end{center}
 \begin{center}
-Supervisor: Jesper Kristensen - Steffen Vutborg
+Supervisor: Jesper Kristensen - TBD (er han?) Steffen Vutborg
 \end{center}
 \begin{center}
 \line(1,0){400}
