--- a/Rapport/contents/formalities/preface.tex
+++ b/Rapport/contents/formalities/preface.tex
@@ -4,6 +4,8 @@
 %Læsevejledning:\\
 %Kommer senere i projektforløbet.
 %\\\\
+
+TBD fyld mere på? 
 This project was written by group 2, for the 3rd semester on the IT-electronics education at university college Nordjylland, Sofiendalsvej 60. The project goal is to make an autonomous robot that can navigate a course utilizing object avoidance and localization.
 %
 \phantom{Luft}\vspace{3cm}
