--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -1,4 +1,7 @@
 In this section the different parts and signals will be tested, this is to make sure everything is up to par with our requirements specifications. The tests consists of measuring different factors, such as current, voltage and response time of each fundamental part. The testing will be done with the available measuring devices such as an oscilloscope, power supply or multimeter.
+
+TBD ALT TEST SKAL TJEKKES IGENNEM 
+
 \section{Unit Testing}
 
 
@@ -21,7 +24,7 @@ A small program for the Arduino has been written which allows the MCU to trigger
 \textbf{200mm:} 1.23 ms\\
 \textbf{500mm:} 2.32 ms\\
 
-
+\subsection{DC Motors}
 \subsubsection{Equipment}
 \begin{enumerate}
 	\item[•]Hameg HM8040-2 Triple Power Supply
